# actitime

./: .gitignore  HANDOFF.md  README.md  actiTIME - Enter Time-Track.htm  actitime.example.toml  pyproject.toml
actiTIME - Enter Time-Track_files/: 192.168.2.157_Archive [26-06-03 16-10-44].har  192.168.2.157_Archive [26-06-03 16-11-27]-save 8 h to programowanie PC.har  EmptyHighlighter_m4BC.js  RegExpSpecialSymbols_m4BC.js  RemoteComboWithouLoadingState_m4BC.js  StringIndexDataProxy_m4BC.js  StringIndex_m4BC.js  TokensHighlighter_m4BC.js  UserNameFormat_m4BC.js  about_css_m4BC.css  actitime_css_m4BC.css  at_js_m4BC.jsp  at_jsonrpc_m4BC.js  calendar_css_m4BC.css  calendar_js_m4BC.jsp  cell_button_m4BC.js  cleanup_demo_data_css_m4BC.css  client_side_errors_js_m4BC.jsp  description_util_m4BC.js  dhtml_popup_m4BC.js  dhtml_popup_with_moire_m4BC.js  dhtml_title_m4BC.js  dropdown-list-button_css_m4BC.css  edit_description_js_m4BC.jsp  empty_002_m4BC.htm  empty_003_m4BC.htm  empty_004_m4BC.htm  empty_005_m4BC.htm  empty_006_m4BC.htm  empty_m4BC.htm  form_changes_js_m4BC.jsp  group_m4BC.js  highlight_colors_js_m4BC.jsp  init_css_m4BC.css  init_js_m4BC.jsp  invertedDays_m4BC.js  jsonrpc_m4BC.js  key_down_handler_m4BC.js  leave_js_m4BC.jsp  menu_css_m4BC.css  (+26 more)
actitime_tool/: __init__.py  cli.py  client.py  config.py  formatting.py
browser/: actitime_submit_tt_helper.js  worklog.normalized.example.json
skills/actitime-time-entry/: SKILL.md
tests/: test_cli.py  test_client.py  test_config.py
