[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "actitime-tool"
version = "0.1.0"
description = "Python CLI for assigned actiTIME projects, tasks, and time-track updates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
actitime = "actitime_tool.cli:main"

[tool.setuptools.packages.find]
include = ["actitime_tool*"]
